# HGS-CVRP

./: .gitignore  CMakeLists.txt  README.md  TestExecutable.cmake
.github/workflows/: CI_Build.yml
Instances/CVRP/: CMT1.vrp  CMT10.vrp  CMT11.vrp  CMT12.vrp  CMT13.vrp  CMT14.vrp  CMT2.vrp  CMT3.vrp  CMT4.vrp  CMT5.vrp  CMT6.vrp  CMT7.vrp  CMT8.vrp  CMT9.vrp  Golden_1.vrp  Golden_10.vrp  Golden_11.vrp  Golden_12.vrp  Golden_13.vrp  Golden_14.vrp  Golden_15.vrp  Golden_16.vrp  Golden_17.vrp  Golden_18.vrp  Golden_19.vrp  Golden_2.vrp  Golden_20.vrp  Golden_3.vrp  Golden_4.vrp  Golden_5.vrp  Golden_6.vrp  Golden_7.vrp  Golden_8.vrp  Golden_9.vrp  X-n670-k130.vrp
Program/: AlgorithmParameters.cpp  AlgorithmParameters.h  CVRPLIB.cpp  CVRPLIB.h  C_Interface.cpp  C_Interface.h  Decomposition.cpp  Decomposition.h  DecompositionClustering.h  Genetic.cpp  Genetic.h  Individual.cpp  Individual.h  LocalSearch.cpp  LocalSearch.h  Makefile  Params.cpp  Params.h  Population.cpp  Population.h  Split.cpp  Split.h  commandline.h  main.cpp
Test/: TestDecomposition.cmake  TestExecutable.cmake  TestExecutableWithoutRounding.cmake
Test/Test-c/: CMakeLists.txt  test.c
